# reqpy

./: .coveragerc  .flake8  .gitignore  Bfgjldfgjlfkdjljg.yml  Bfgjldfgjlfkdjljg.yml.yml  GFG-1.html  README.md  Tititidfgddfg.yml  Toto_toto_toto.yml  Totodfgdfg.yml.yml  Totottototoot.yml  demo.ipynb  demo.py  demo2.py  demo_md.py  full.tex  invalid_requirement.yml  output.yml  pyproject.toml  reqDemo1.yaml  reqDemo2.yaml  reqDemo_test.yaml  test_fct.ipynb  test_log.py  titi.yml  toto.tex  valid_requirement.yml
OLD/reqpy/: RequirementItems.py  __genericItem.py  __main__.py  __settings.py  apps.py  database.py  demo.py  folders.py  requirements.py
OLD/reqpy/tools/: __string.py
OLD/tests/: context.py  demo.py  test_advanced.py
OLD/tests/folder/: test_GenericFolder.py
OLD/tests/utils/: __init__.py  test_ImmutableClass.py  test_lorem.py
OLD/utils/: __lorem_ipsum.py  __myClass.py
OLD/utils/exception/: __errormsg.py
OLD/utils/fileIO/: __list.py
OLD/utils/validation/: __datatype.py  __init__.py  __paths.py  __string.py
reqpy/: .pylintrc  RequirementItems.py  __DB.py  __genericItem.py  __init__.py  __logging.py  __main__.py  __settings.py  apps.py  cli.py  constants.py  database.py  definition.py  definitionItems.py  demo.py  demo2.py  dirSkeleton.py  exception.py  folders.py  markdown.py  mkdocs_utils.py  pouetpouet.py  reqfile.py  requirement.py  requirementItems.py  requirements.py  settings.py  tools.py
reqpy/tools/: __init__.py  files.py  image.py  markdown.py  mkutils.py  paths.py  status.py  strings.py
reqpy/utils/: __init__.py  __lorem_ipsum.py  mkutils.py
reqpy/utils/exception/: __init__.py
reqpy/utils/fileIO/: __folder.py  __init__.py  __read.py
test_path/requirements/: Oomauvgnxkidt5ciobviexjkke4onbymilc5xosc.yml  V15tg3snyjqf4lbvxwpsv9qbzhztujmlev0zmifq.yml
tests/: __init__.py  context.py  test_CheckStatus.py  test_advanced.py  test_basic.py  test_demo.py  test_directory.py  test_folderStructure.py  test_genericDB.py  test_genericItem.py  test_haspunctuation_or_accent.py  test_logging.py  test_path_tools.py  test_random_string.py  test_reqFolder.py  test_requirement.py  test_requirementset.py
tests/cli/: test_version.py
tests/utils/: test_ImmutableClass.py  test_lorem.py
(+18 files in other folders)
