[tool.poetry]
name = "reqpy"
version = "0.1.0"
description = "system requirement maangement tool based on YAML files"
authors = ["Antoine Barre <antoine.barre@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
